--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ComposeActivity">
+        <activity android:name=".activities.ComposeActivity"></activity>
+        <activity android:name=".activities.TweetDetailActivity" />
+        <activity android:name=".activities.TimelineActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -28,10 +31,7 @@
                     android:host="www.codepath.com"
                     android:pathPrefix="/example" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".activities.TweetDetailActivity" />
-        <activity android:name=".activities.TimelineActivity" />
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
